<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        xmlns:app="http://schemas.android.com/apk/res-auto">


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ic_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_salem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salem"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/sfprodisplaybold"
            android:textSize="24sp"
            android:textColor="@color/txt_btn"
            app:layout_constraintTop_toBottomOf="@+id/ic_back"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_acckiru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:text="@string/acc_kiriniz"
            android:textColor="@color/descrip"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/txt_salem"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="24dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_acckiru">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="14sp"
                android:textColor="@color/title"
                android:fontFamily="@font/sfprodisplaybold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edTextEmail"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/custom_edittext_focus_action"
                android:drawableStart="@drawable/ic_message"
                android:drawablePadding="8dp"
                android:fontFamily="@font/sfprodisplayregular"
                android:hint="@string/hint_email"
                android:paddingStart="16dp"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:textColorHint="@color/hint_color"
                android:inputType="textEmailAddress"
                tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/txt_error"
                android:textColor="@color/stroke_error"
                android:visibility="gone"
                android:textSize="14sp"
                android:fontFamily="@font/sfprodisplayregular"/>
        </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@id/txt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/password"
                android:textSize="14sp"
                android:textColor="@color/title"
                android:fontFamily="@font/sfprodisplaybold"
                app:layout_constraintTop_toBottomOf="@id/signIn"
                app:layout_constraintStart_toStartOf="@id/signIn"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edTextPassword"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/custom_edittext_focus_action"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:fontFamily="@font/sfprodisplayregular"
                android:hint="@string/hint_password"
                android:paddingStart="16dp"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:paddingEnd="16dp"
                android:textColorHint="@color/hint_color"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@id/txt_password"
                app:layout_constraintStart_toStartOf="@id/signIn"
                app:layout_constraintEnd_toEndOf="@id/signIn"
                tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ic_toggle"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="ic_toggle"
            app:layout_constraintBottom_toBottomOf="@+id/edTextPassword"
            app:layout_constraintEnd_toEndOf="@id/edTextPassword"
            app:layout_constraintTop_toTopOf="@+id/edTextPassword"
            app:srcCompat="@drawable/ic_show_password"
            tools:ignore="TouchTargetSizeCheck" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_error_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:visibility="gone"
                android:text="@string/txt_error_pass"
                android:textColor="@color/stroke_error"
                android:textSize="14sp"
                android:fontFamily="@font/sfprodisplayregular"
                app:layout_constraintTop_toBottomOf="@id/edTextPassword"
                app:layout_constraintStart_toStartOf="@id/edTextPassword"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_passRedirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/password_redirect"
                android:layout_marginTop="16dp"
                android:textColor="@color/purple"
                android:textSize="14sp"
                android:fontFamily="@font/sfprodisplaysemibold"
                app:layout_constraintTop_toBottomOf="@id/edTextPassword"
                app:layout_constraintEnd_toEndOf="@id/edTextPassword"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signIn"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_button_purple"
                android:text="@string/kiru"
                android:textAllCaps="false"
                android:fontFamily="@font/sfprodisplaysemibold"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/txt_passRedirect"
                app:layout_constraintStart_toStartOf="@id/edTextPassword"
                app:layout_constraintEnd_toEndOf="@id/edTextPassword"
                tools:ignore="VisualLintButtonSize" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/btn_signIn"
            app:layout_constraintStart_toStartOf="@id/btn_signIn"
            app:layout_constraintTop_toBottomOf="@+id/btn_signIn">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfprodisplayregular"
                android:text="@string/no_acc"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/signUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/sfprodisplaysemibold"
                android:text="@string/registr"
                android:textColor="@color/purple"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/hint_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_orregistr"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/logo_apple" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/sfprodisplaysemibold"
                    android:text="@string/apple_id"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_orregistr"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/logo_google" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/sfprodisplaysemibold"
                    android:text="@string/google_acc"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>